@@ -32,6 +32,7 @@ ChildWindow.PropertiesWindow {
     Renderer {
         backgroundcolor = #E6E6E6;
         bordercolor = Black;
+        bordercolorfocused = Blue;
         borders = (1, 1, 1, 1);
         distancetoside = 3;
         paddingbetweenbuttons = 1;
@@ -78,6 +79,7 @@ ChildWindow.ToolboxWindow {
     Renderer {
         backgroundcolor = #E6E6E6;
         bordercolor = Black;
+        bordercolorfocused = Blue;
         borders = (1, 1, 1, 1);
         distancetoside = 3;
         paddingbetweenbuttons = 1;
@@ -103,6 +105,7 @@ ChildWindow.Form {
     Renderer {
         backgroundcolor = #E6E6E6;
         bordercolor = Black;
+        bordercolorfocused = Blue;
         borders = (1, 1, 1, 1);
         distancetoside = 3;
         paddingbetweenbuttons = 1;
