@@ -151,6 +151,20 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the color of the borders when the widget is focused
+        /// @param color  New focused border color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setBorderColorFocused(Color color);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the color of the borders when the widget is focused
+        /// @return focused border color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Color getBorderColorFocused() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Changes the distance between the title bar and the actual contents of the child window
         /// @param border  Space between title bar and child window contents
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
